2003-02-19  Loban A Rahman <loban@earthling.net>

    * stickynotes.schemas.in: Added missing documentation on click_behaviour
      key (about lock/unlock).
    * stickynotes.h, stickynotes.c: Fixed bug #106150. Now notes don't move
      when they are hidden and then shown.

2003-02-18  Loban A Rahman <loban@earthling.net>

    * *.c, *.h: Properly updated tooltips when locking/unlocking notes.

2003-02-15  Loban A Rahman <loban@earthling.net>

    * stickynotes.schemas.in: Fixed the issue that caused bad strings to be
      marked for translation (mispositioned locale tag).
    * stickynotes.glade: Mark the copyright string as untranslatable, as well
      as a few other strings that are untrasnlatable.
    * ../po/POTFILES.in: Modified translatable file list for stickynotes.
    * *.c, *.h, and more: Added "locking" feature. You can now lock all notes
      so that they are not editable.

2003-02-14  Loban A Rahman <loban@earthling.net>

    * Renamed a bunch of files to standardized forms:
      stickynotes_applet.server.in.in -> GNOME_StickyNotesApplet.server.in.in
      stickynotes_applet.xml.in -> GNOME_StickyNotesApplet.xml.in
      stickynotes_applet.schemas.in -> stickynotes.schemas.in
      stickynotes_applet.glade -> stickynotes.glade
      stickynotes_applet.gladep -> stickynotes.gladep
    * Makefile.am, stickynotes_applet.h: Made a few changes to reflect the
      above.

2003-02-14  Loban A Rahman <loban@earthling.net>

    * Makefile.am: Fixed itsy bitsy issues on importing stickynotes.
    * docs/: Readded docs into tree.
    * Makefile.am, pixmaps/Makefile.am: Changed destination locations of
      glade files and pixmaps.
    * stickynotes.c: Removed #if that decided between Gtk 2.0 and 2.2.
      Now, Gtk 2.2 is required.
    * Makefile.am: Removed unncessary installation of README and ChangeLog.
    * stickynotes.c, stickynotes_applet_callbacks.c, stickynotes_applet.c:
      Included some hacks to fix bugs arising from using libglade.