@@ -119,6 +119,15 @@ Template last modified Mar 12, 2002
 	<title>Basic Usage</title>
 	<sect2 id="stickynotes-applet-menu">
 	    <title>Applet Menu</title>
+	    <figure id="applet-menu-fig"> 
+		    <title>&applet; Applet Popup Menu</title> 
+	    	    <screenshot> 
+			<mediaobject> 
+		    	<imageobject><imagedata fileref="figures/applet_menu.png" format="PNG"/></imageobject>
+		    	<textobject><phrase>Shows Sticky Notes applet popup menu.</phrase></textobject> 
+		    </mediaobject> 
+	    	</screenshot> 
+	    </figure> 
 	    <para>Right click on the applet to bring up a popup-menu. Along with the usual panel menu options, you can use this menu to:</para>
 	    <menuchoice><guimenuitem>New Note</guimenuitem></menuchoice>
 	    <para>Create a new sticky note. You can also left-click the applet to create a new sticky note.</para>
@@ -141,6 +150,15 @@ Template last modified Mar 12, 2002
 	</sect2>
 	<sect2 id="stickynotes-note-menu">
 	    <title>Note Menu</title>
+	    <figure id="note-menu-fig"> 
+		    <title>&applet; Note Popup Menu</title> 
+	    	    <screenshot> 
+			<mediaobject> 
+		    	<imageobject><imagedata fileref="figures/note_menu.png" format="PNG"/></imageobject>
+		    	<textobject><phrase>Shows Sticky Notes note popup menu.</phrase></textobject> 
+		    </mediaobject> 
+	    	</screenshot> 
+	    </figure> 
 	    <para>Right click on the title of a sticky note to bring up another popup-menu. You can use this menu to:</para>
 	    <menuchoice><guimenuitem>New Note</guimenuitem></menuchoice>
 	    <para>Create a new sticky note.</para>
@@ -154,6 +172,15 @@ Template last modified Mar 12, 2002
     <!-- ============= Advanced Settings ============================ -->
     <sect1 id="stickynotes-advanced-settings"> 
 	<title>Advanced Settings</title>
+	<figure id="preferences-fig"> 
+	    <title>&applet; Applet Preferences Dialog</title> 
+	    <screenshot> 
+		<mediaobject> 
+		    <imageobject><imagedata fileref="figures/preferences_dialog.png" format="PNG"/></imageobject>
+		    <textobject><phrase>Shows Sticky Notes applet preferences dialog.</phrase></textobject> 
+		</mediaobject> 
+	    </screenshot> 
+	</figure> 
 	<para>Sticky Notes allows you to customize several settings. Some can only be modified using the
 	    <application>gconf-editor</application>. Look under the key <phrase>"/apps/stickynotes_applet"</phrase>. The more
 	    common ones are available in a Preferences dialog, and are outlined below. More details can be obtained by accessing
