@@ -1,3 +1,7 @@
+2003-02-20  Loban A Rahman <loban@earthling.net>
+
+    * docs/C/stickynotes_applet.xml, Makefile.am: Added more figures.
+
 2003-02-19  Loban A Rahman <loban@earthling.net>
 
     * stickynotes.schemas.in: Added missing documentation on click_behaviour
